Rename files/build system references to Context -> ResourcePaths

--- a/libs/CMakeLists.txt
+++ b/libs/CMakeLists.txt
@@ -2,8 +2,8 @@ add_subdirectory (all)
 add_subdirectory (AOTCompile)
 add_subdirectory (archive-rw)
 add_subdirectory (Cache)
-add_subdirectory (Context)
-add_subdirectory (none)
 add_subdirectory (ExecutionYengine)
+add_subdirectory (none)
+add_subdirectory (ResourcePaths)
 add_subdirectory (StaticCodeGen)
 add_subdirectory (wllvm)
