--- a/libs/ResourcePaths/CMakeLists.txt
+++ b/libs/ResourcePaths/CMakeLists.txt
@@ -3,8 +3,8 @@ set(LLVM_LINK_COMPONENTS
   Support
 )
 
-add_llvm_library(Context
-  Context.cpp
+add_llvm_library(ResourcePaths
+  ResourcePaths.cpp
 )
 
 add_definitions(${LLVM_DEFINITIONS})
