--- a/tools/all-info/CMakeLists.txt
+++ b/tools/all-info/CMakeLists.txt
@@ -6,6 +6,6 @@ add_llvm_tool(all-info
   all-info.cpp
 )
 
-target_link_libraries(all-info liball Context)
+target_link_libraries(all-info liball ResourcePaths)
 
 add_definitions(${LLVM_DEFINITIONS})
