test/CMakeLists: Add dep on alld if we're building it.
Fixes invocation of 'make check' directly,
sorry @trajend2! O:)

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -15,6 +15,9 @@ list(APPEND ALLVM_TEST_DEPENDS
   wllvm-extract
   all-info
 )
+if ( LLD_AVAILABLE_AS_LIB )
+  list(APPEND ALLVM_TEST_DEPENDS alld)
+endif()
 set(ALLVM_TEST_PARAMS
   allvm_site_config=${CMAKE_CURRENT_BINARY_DIR}/lit.site.cfg
 )
