allopt: Init new tool for running bc pipelines on allexe's.
Part of #41.

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -4,6 +4,7 @@ endif()
 
 add_subdirectory(all-info)
 add_subdirectory(alley)
+add_subdirectory(allopt)
 add_subdirectory(allready)
 add_subdirectory(alltogether)
 add_subdirectory(bc2allvm)
