--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -6,14 +6,15 @@ configure_lit_site_cfg(
 
 # Surely there's a better way?
 list(APPEND ALLVM_TEST_DEPENDS
+  all-info
   alley
+  allopt
   allready
   alltogether
   bc2allvm
   none
   wllvm-dump
   wllvm-extract
-  all-info
 )
 if ( LLD_AVAILABLE_AS_LIB )
   list(APPEND ALLVM_TEST_DEPENDS alld)
