libnone: build w/stack protector, don't specify optimization argument
Let musl's build system set optimization flags to use,
it specifically checks whether we set "-O" or not.

--- a/libs/none/CMakeLists.txt
+++ b/libs/none/CMakeLists.txt
@@ -29,7 +29,9 @@ if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
   set(MUSL_CFLAGS_EXTRA "${MUSL_CFLAGS_EXTRA} -Wno-ignored-attributes -Wno-unknown-pragmas")
 endif()
 
-set(MUSL_CFLAGS "-O2 -pipe -fPIC ${MUSL_CFLAGS_EXTRA}" CACHE string "CFLAGS for building musl")
+set(MUSL_CFLAGS_EXTRA "${MUSL_CFLAGS_EXTRA} -fstack-protector-all")
+
+set(MUSL_CFLAGS "-fPIC ${MUSL_CFLAGS_EXTRA}" CACHE string "CFLAGS for building musl")
 
 
 add_custom_command(OUTPUT ${MUSL}/config.mak
