Use stack protector hardening where possible
Don't disable it (in the cc wrapper) build-wide,
instead only selectively disable it when building
musl-- which will be mostly built with stack protector
support except where that's not possible
(managed by musl's build system)

Auto-force-adding stack protector at the cc-wrapper level
breaks the musl build's ability to disable it so
let it do its thing.

--- a/libs/none/CMakeLists.txt
+++ b/libs/none/CMakeLists.txt
@@ -53,7 +53,7 @@ else()
 endif()
 
 add_custom_command(OUTPUT ${MUSL}/lib/libc.a
-  COMMAND ${MAKECMD} -C ${MUSL}
+  COMMAND hardeningDisable=stackprotector ${MAKECMD} -C ${MUSL}
   DEPENDS ${MUSL}/config.mak
   COMMENT "Building ${MUSL}..."
 )
