lit: Set XDG_CACHE_HOME to accomodate changed behavior
Not really sure /why/ but user_cache_directory is now returning
"successfully" but seems to think HOME is "/", which doesn't
seem right AFAICT.

nix build users have home of /var/empty and HOME=/homeless-shelter...

--- a/test/lit.site.cfg.in
+++ b/test/lit.site.cfg.in
@@ -17,6 +17,7 @@ curpath = os.environ.get('PATH', '')
 if curpath:
     newpath += ":" + curpath
 config.environment['PATH'] = newpath
+config.environment['XDG_CACHE_HOME'] = config.test_exec_root + "/cache";
 
 # TODO: Get this more reliably/directly: " = @LIBNONE_PATH@" or something
 libnone = "@LLVM_LIBRARY_OUTPUT_INTDIR@/libnone.a"
