llvm6: use keyword syntax for target_link_libraries, fix build

--- a/tools/all-info/CMakeLists.txt
+++ b/tools/all-info/CMakeLists.txt
@@ -6,6 +6,6 @@ add_llvm_tool(all-info
   all-info.cpp
 )
 
-target_link_libraries(all-info liball ResourcePaths)
+target_link_libraries(all-info PRIVATE liball ResourcePaths)
 
 add_definitions(${LLVM_DEFINITIONS})
