--- a/tools/allopt/CMakeLists.txt
+++ b/tools/allopt/CMakeLists.txt
@@ -9,6 +9,6 @@ add_llvm_tool(allopt
   allopt.cpp
 )
 
-target_link_libraries(allopt liball ResourcePaths)
+target_link_libraries(allopt PRIVATE liball ResourcePaths)
 
 add_definitions(${LLVM_DEFINITIONS})
