Revert "llvm6: use keyword syntax for target_link_libraries, fix build"
Nevermind, doesn't work pre-LLVM6.

This reverts commit 65cb6501dbd3eadce4f8ff542e672154f43f4143.

--- a/tools/alld/CMakeLists.txt
+++ b/tools/alld/CMakeLists.txt
@@ -2,7 +2,7 @@ add_llvm_tool(alld
   alld.cpp
 )
 
-target_link_libraries(alld PRIVATE ResourcePaths lldELF lldConfig lldCore)
+target_link_libraries(alld ResourcePaths lldELF lldConfig lldCore)
 
 llvm_config(alld
 # These are taken directly from lld/ELF/CMakeLists.txt:
