--- a/tools/allmux/CMakeLists.txt
+++ b/tools/allmux/CMakeLists.txt
@@ -10,7 +10,7 @@ add_llvm_tool(allmux
   allmux.cpp
   CtorUtils.cpp
 )
-target_link_libraries(allmux PRIVATE liball Passes ResourcePaths)
+target_link_libraries(allmux liball Passes ResourcePaths)
 
 set(MM_BC ${CMAKE_CURRENT_SOURCE_DIR}/main/mux_main.bc)
 install(FILES ${MM_BC} DESTINATION lib)
