--- a/tools/wllvm-extract/CMakeLists.txt
+++ b/tools/wllvm-extract/CMakeLists.txt
@@ -11,6 +11,6 @@ set(LLVM_LINK_COMPONENTS
 add_llvm_tool(wllvm-extract
   wllvm-extract.cpp
 )
-target_link_libraries(wllvm-extract PRIVATE liball ResourcePaths wllvm Passes)
+target_link_libraries(wllvm-extract liball ResourcePaths wllvm Passes)
 
 add_definitions(${LLVM_DEFINITIONS})
