ALLVMConfig.cmake.in: fix ALLVMTargets include

--- a/cmake/ALLVMConfig.cmake.in
+++ b/cmake/ALLVMConfig.cmake.in
@@ -6,4 +6,6 @@ set_and_check(ALLVM_INCLUDE_DIR "@PACKAGE_ALLVM_INCLUDE_INSTALL_DIR@")
 set_and_check(ALLVM_LIB_DIR "@PACKAGE_ALLVM_LIB_INSTALL_DIR@")
 set_and_check(ALLVM_PREFIX "@PACKAGE_ALLVM_PREFIX@")
 
-include(ALLVMTargets.cmake)
+# Relative include
+get_filename_component(SELF_DIR "${CMAKE_CURRENT_LIST_FILE}" PATH)
+include(${SELF_DIR}/ALLVMTargets.cmake)
