libs/none: group code by external source, add relevant licenses

--- a/libs/none/CMakeLists.txt
+++ b/libs/none/CMakeLists.txt
@@ -3,19 +3,19 @@ enable_language(ASM)
 set(MUSL musl-1.1.18)
 
 set(MUSL_PATCHES
-  ## # musl-patches/0002-Disable-vdso-support-on-x86_64-we-don-t-support-it-y.patch
-  ## musl-patches/0003-Remove-simple-malloc-gets-in-way-of-real-malloc.patch
-  ## #  musl-patches/0004-KLUDGE-More-workaround-weak-alias-this-time-tackling.patch
-  musl-patches/0005-Another-weak_alias-victim-destructors-for-stdio-and-.patch
-  ## musl-patches/0006-configure-improve-tryflag-to-reject-ignored-opt-argu.patch
-  ## musl-patches/0007-Partially-revert-remove-potentially-PIC-incompatible.patch
-  ## musl-patches/0008-kludge-around-_DYNAMIC-and-our-bad-weak-symbol-handl.patch
+  ## # musl/patches/0002-Disable-vdso-support-on-x86_64-we-don-t-support-it-y.patch
+  ## musl/patches/0003-Remove-simple-malloc-gets-in-way-of-real-malloc.patch
+  ## #  musl/patches/0004-KLUDGE-More-workaround-weak-alias-this-time-tackling.patch
+  musl/patches/0005-Another-weak_alias-victim-destructors-for-stdio-and-.patch
+  ## musl/patches/0006-configure-improve-tryflag-to-reject-ignored-opt-argu.patch
+  ## musl/patches/0007-Partially-revert-remove-potentially-PIC-incompatible.patch
+  ## musl/patches/0008-kludge-around-_DYNAMIC-and-our-bad-weak-symbol-handl.patch
 )
 
 set(MUSL_CFLAGS_EXTRA "")
 if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
   list(APPEND MUSL_PATCHES
-    musl-patches/0001-Build-with-fPIC-large-code-model-to-workaround-RTDyL.patch
+    musl/patches/0001-Build-with-fPIC-large-code-model-to-workaround-RTDyL.patch
   )
   # Don't complain about 'unused' arguments
   # This happens when building assembly files using same CFLAGS used for C files,
@@ -35,10 +35,10 @@ set(MUSL_CFLAGS "-fPIC ${MUSL_CFLAGS_EXTRA}" CACHE string "CFLAGS for building m
 
 add_custom_command(OUTPUT ${MUSL}/config.mak
   COMMAND rm -rf "${MUSL}"
-  COMMAND tar xf "${CMAKE_CURRENT_SOURCE_DIR}/${MUSL}.tar.gz"
+  COMMAND tar xf "${CMAKE_CURRENT_SOURCE_DIR}/musl/${MUSL}.tar.gz"
   COMMAND for PATCH in ${MUSL_PATCHES} \; do patch -p1 -d "${MUSL}" -i "${CMAKE_CURRENT_SOURCE_DIR}/$$PATCH" \; done
   COMMAND cd ${MUSL} && CC=${CMAKE_C_COMPILER} ./configure --disable-shared CFLAGS=${MUSL_CFLAGS}
-  MAIN_DEPENDENCY ${MUSL}.tar.gz
+  MAIN_DEPENDENCY musl/${MUSL}.tar.gz
   DEPENDS ${MUSL_PATCHES}
   COMMENT "Configuring ${MUSL}"
 )
@@ -60,7 +60,7 @@ add_custom_target(musl DEPENDS ${MUSL}/lib/libc.a)
 set_directory_properties(PROPERTIES ADDITIONAL_MAKE_CLEAN_FILES "${MUSL}")
 
 # Compile our little assembly bits into a library, then merge in musl's libc.a.
-add_library(none STATIC UnwindRegistersRestore.S UnwindRegistersSave.S dso_handle.S dynamic.S)
+add_library(none STATIC unwind/UnwindRegistersRestore.S unwind/UnwindRegistersSave.S dso_handle.S dynamic.S)
 install(TARGETS none DESTINATION lib)
 set_output_directory(none BINARY_DIR ${LLVM_RUNTIME_OUTPUT_INTDIR} LIBRARY_DIR ${LLVM_LIBRARY_OUTPUT_INTDIR})
 add_dependencies(none musl)
