tools/*: hide unrelated options by default, much less clutter

--- a/include/allvm/GitVersion.h.in
+++ b/include/allvm/GitVersion.h.in
@@ -9,8 +9,9 @@ namespace allvm {
 
 __attribute__((constructor)) void setVersionPrinter(void);
 void setVersionPrinter() {
-  llvm::cl::AddExtraVersionPrinter(
-      []() { llvm::errs() << "ALLVM Tools: git-@GITVERSION@\n"; });
+  llvm::cl::SetVersionPrinter([]() {
+      llvm::outs() << "ALLVM Tools: git-@GITVERSION@\n";
+  });
 }
 
 } // end namespace allvm
