--- a/include/allvm/GitVersion.h.in
+++ b/include/allvm/GitVersion.h.in
@@ -16,7 +16,7 @@ __attribute__((constructor)) void setVersionPrinter(void);
 void setVersionPrinter() {
   llvm::cl::SetVersionPrinter([]() {
     llvm::raw_ostream &OS = llvm::outs();
-    OS << "ALLVM Tools (http://allvm.org): version git-@GITVERSION@\n";
+    OS << "ALLVM Tools (http://allvm.org): version @GITVERSION@\n";
     OS << "  Using LLVM " << LLVM_VERSION_STRING << "\n";
 
     // Following is mostly from lib/Support/CommandLine.cpp
