--- a/include/allvm/GitVersion.h.in
+++ b/include/allvm/GitVersion.h.in
@@ -12,11 +12,12 @@
 
 namespace allvm {
 
-__attribute__((constructor)) void setVersionPrinter(void);
-void setVersionPrinter() {
+void setVersionPrinter(llvm::StringRef argv0) {
+  static std::string name = argv0;
   llvm::cl::SetVersionPrinter([]() {
     llvm::raw_ostream &OS = llvm::outs();
-    OS << "ALLVM Tools (http://allvm.org) @GITVERSION@\n";
+    OS << name << "(ALLVM Tools) @GITVERSION@\n";
+    OS << "  ALLVM Tools (http://allvm.org) version @GITVERSION@\n";
     OS << "  LLVM version " << LLVM_VERSION_STRING << "\n";
 
     // Following is mostly from lib/Support/CommandLine.cpp
