--- a/libs/none/CMakeLists.txt
+++ b/libs/none/CMakeLists.txt
@@ -6,7 +6,7 @@ set(MUSL_PATCHES
   ## # musl/patches/0002-Disable-vdso-support-on-x86_64-we-don-t-support-it-y.patch
   ## musl/patches/0003-Remove-simple-malloc-gets-in-way-of-real-malloc.patch
   ## #  musl/patches/0004-KLUDGE-More-workaround-weak-alias-this-time-tackling.patch
-  musl/patches/0005-Another-weak_alias-victim-destructors-for-stdio-and-.patch
+  #musl/patches/0005-Another-weak_alias-victim-destructors-for-stdio-and-.patch
   ## musl/patches/0006-configure-improve-tryflag-to-reject-ignored-opt-argu.patch
   ## musl/patches/0007-Partially-revert-remove-potentially-PIC-incompatible.patch
   ## musl/patches/0008-kludge-around-_DYNAMIC-and-our-bad-weak-symbol-handl.patch
@@ -14,9 +14,9 @@ set(MUSL_PATCHES
 
 set(MUSL_CFLAGS_EXTRA "")
 if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
-  list(APPEND MUSL_PATCHES
-    musl/patches/0001-Build-with-fPIC-large-code-model-to-workaround-RTDyL.patch
-  )
+  #list(APPEND MUSL_PATCHES
+  #  musl/patches/0001-Build-with-fPIC-large-code-model-to-workaround-RTDyL.patch
+  #)
   # Don't complain about 'unused' arguments
   # This happens when building assembly files using same CFLAGS used for C files,
   # lots of them don't make any sense for assembly code so they go unused.
