travis: cache /nix-cache, which we manage as local binary cache

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ sudo: required
 # Experiment with cache
 cache:
   directories:
-    - /nix
+    - /nix-cache
 
 before_cache:
   - rm -rf /nix-cache
