--- a/libs/none/CMakeLists.txt
+++ b/libs/none/CMakeLists.txt
@@ -10,6 +10,8 @@ set(MUSL_PATCHES
   ## musl/patches/0006-configure-improve-tryflag-to-reject-ignored-opt-argu.patch
   ## musl/patches/0007-Partially-revert-remove-potentially-PIC-incompatible.patch
   ## musl/patches/0008-kludge-around-_DYNAMIC-and-our-bad-weak-symbol-handl.patch
+  musl/patches/0009-configure-don-t-force-disable-unwind-tables-let-TC-d.patch
+  musl/patches/0010-configure-don-t-add-fomit-frame-pointer.patch
 )
 
 set(MUSL_CFLAGS_EXTRA "")
