libnone: also use --strip-unneeded
In particular this fixes problem with symbol "index"
where a local variable by that name is found (in `__tz.o`)
instead of the exported function.

I believe this (only) happens when the allexe needs
an exported symbol from `__tz.o` first, after which
we erroneously use its local variable instead of
searching for the exported definition elsewhere.

(yes our resolving logic is wrong/dumb :))

We currently mis-resolve `index` (sometimes),
but ad-hoc script suggests `remove` as the
(hopefully) "only" other possibility. FWIW.

Instead of stripping locals as done in this commit,
we could rename locals (perhaps by adding a prefix)
so they're still around for debugging and such.

For now let's drop them and see how things go.

--- a/libs/none/CMakeLists.txt
+++ b/libs/none/CMakeLists.txt
@@ -71,7 +71,7 @@ configure_file(merge.ar.in merge.ar)
 add_custom_command(TARGET none POST_BUILD
   COMMAND ${CMAKE_AR} -M <merge.ar
   COMMAND mv libnone.a.merged ${LLVM_LIBRARY_OUTPUT_INTDIR}/libnone.a
-  COMMAND ${CMAKE_STRIP} --strip-debug ${LLVM_LIBRARY_OUTPUT_INTDIR}/libnone.a
+  COMMAND ${CMAKE_STRIP} --strip-debug --strip-unneeded ${LLVM_LIBRARY_OUTPUT_INTDIR}/libnone.a
   DEPENDS merge.ar
 )
 
