travis: disable excessively verbose IRC messages

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,10 +8,10 @@ before_install:
 sudo: required
 
 # announce to #allvm
-notifications:
-    webhooks:
-        urls:
-            - "https://scalar.vector.im/api/neb/services/hooks/dHJhdmlzLWNpLyU0MGR0eldpbGwlM0FtYXRyaXgub3JnLyUyMVV6WElnQ2FnZnNLUE9nd3JqZiUzQW1hdHJpeC5vcmc"
-        on_success: change  # always|never|change
-        on_failure: always
-        on_start: never
+#notifications:
+#    webhooks:
+#        urls:
+#            - "https://scalar.vector.im/api/neb/services/hooks/dHJhdmlzLWNpLyU0MGR0eldpbGwlM0FtYXRyaXgub3JnLyUyMVV6WElnQ2FnZnNLUE9nd3JqZiUzQW1hdHJpeC5vcmc"
+#        on_success: change  # always|never|change
+#        on_failure: always
+#        on_start: never
