travis: fix git invocation to work if not installed

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: nix
 before_install:
   - ./.travis/configure-nix.sh
   - ./.travis/install-new-nix.sh
-  - git pull --unshallow
+  - ./.travis/full-fetch.sh
 
 # Force VM instead of container, so that sandbox works
 sudo: required
