lgtm.yml: tweak to try to trigger analysis

--- a/.lgtm.yml
+++ b/.lgtm.yml
@@ -6,6 +6,6 @@ path_classifiers:
     - README.md
     - LICENSE.txt
     - CREDITS.txt
-    - docs
+    - docs/*md
   test:
-    - test
+    - test/lit
