--- a/.lgtm.yml
+++ b/.lgtm.yml
@@ -15,4 +15,6 @@ extraction:
     prepare:
       packages:
         - llvm-4.0-dev
-        - liblld-4.0-dev
+        - llvm-4.0-tools
+          # TODO: liblld needed for alld
+        # - liblld-4.0-dev
