--- a/.lgtm.yml
+++ b/.lgtm.yml
@@ -2,6 +2,8 @@ path_classifiers:
   library:
     - utils/lit
     - libs/none/musl
+  generated:
+    exclude: /
   docs:
     - README.md
     - LICENSE.txt
