travis: try setting default nix version to new release (2.1)
Likely will find myself reaching for this script again
but for now remove it as unused (if this works).

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: nix
+nix: 2.1
 
 before_install:
   - ./.travis/configure-nix.sh
-  - ./.travis/install-new-nix.sh
   - ./.travis/install-cachix.sh
 
 # Force VM instead of container, so that sandbox works
