--- a/libs/none/CMakeLists.txt
+++ b/libs/none/CMakeLists.txt
@@ -31,9 +31,12 @@ set(MUSL_PATCHES
 
 set(MUSL_CFLAGS_EXTRA "")
 if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
-  #list(APPEND MUSL_PATCHES
-  #  musl/patches/0001-Build-with-fPIC-large-code-model-to-workaround-RTDyL.patch
-  #)
+  # Bug in LLVM 7.0 causes compiler to crash!
+  if (CMAKE_CXX_COMPILER_VERSION VERSION_LESS 7.0)
+    list(APPEND MUSL_PATCHES
+      musl/patches/0001-Build-with-fPIC-large-code-model-to-workaround-RTDyL.patch
+    )
+  endif()
   # Don't complain about 'unused' arguments
   # This happens when building assembly files using same CFLAGS used for C files,
   # lots of them don't make any sense for assembly code so they go unused.
